--- a/day-4/package.json
+++ b/day-4/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "node-device-detector": "^2.0.18",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
